--- a/files/order_fast.htm
+++ b/files/order_fast.htm
@@ -303,16 +303,14 @@
 
 <!-- Блок для обновления данных корзины. Не виден пользователю -->
 <div style="display:none;" id="newCartLabel">
-  <a href="{CART_URL}" title="Корзина">
-    <div class="icon">
-      <i class="icon-cart"></i>
-      <span class="cart__count" data-count="{CART_COUNT_TOTAL}">{CART_COUNT_TOTAL}</span>
-    </div>
-    <div class="content">
-      <div class="cart__label">Корзина</div>
-      <div class="cart__totalSum totalSum">{CART_SUM_NOW_WITH_DISCOUNT | money_format }</div>
-    </div>
+  <div class="icon dropdown__open" data-open="cart">
+    <i class="icon-cart"></i>
+    <span class="cart__count" data-count="{CART_COUNT_TOTAL}">{CART_COUNT_TOTAL}</span>
     <span class="dropdown__angle"></span>
+  </div>
+  <a href="{CART_URL}" title="Корзина" class="content">
+    <div class="cart__label">Корзина</div>
+    <div class="cart__totalSum totalSum">{CART_SUM_NOW_WITH_DISCOUNT | money_format }</div>
   </a>
 </div>
 <!-- Блок для обновления данных корзины. Не виден пользователю -->
