--- a/files/cart_ajax_add.htm
+++ b/files/cart_ajax_add.htm
@@ -1,45 +1,15 @@
 {% IF FORM_NOTICE %}<div class="ajax__notice">{FORM_NOTICE}</div>{% ENDIF %}
-<div class="ajax__cart modal addto__goods" style="display: none;">
-  {% IF FORM_NOTICE %}<div class="modal__title title">{FORM_NOTICE}</div>{% ENDIF %}
-  <div class="modal__content">
-    <div class="goods__items">
-      {% FOR cart_items %}
-        {% IF cart_items.GOODS_MOD_ID = FORM_GOODS_MOD_ID %}
-        <div class="addto__item" data-id="{cart_items.GOODS_ID}">
-          <a href="{cart_items.GOODS_URL}" title="{cart_items.GOODS_NAME}" class="addto__image"><img src="{% IF cart_items.GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=florist{% ELSE %}{cart_items.GOODS_IMAGE_ICON}{% ENDIF %}" alt="{cart_items.GOODS_NAME}" class="goods-image-icon" /></a>
-          <div class="addto__shop">
-            <!-- Название -->
-            <a href="{cart_items.GOODS_URL}" class="addto__name" title="{cart_items.GOODS_NAME}"><span>{cart_items.GOODS_NAME}</span></a>
-            {% IFNOT cart_items.distinctive_properties_empty %}<div class="addto__mod">({% FOR distinctive_properties %}{cart_items.distinctive_properties.NAME}: {cart_items.distinctive_properties.VALUE}{% IFNOT cart_items.distinctive_properties.last %}, {% ENDIF %}{% ENDFOR %})</div>{% ENDIF %}
-            <!-- Цена -->
-            <div class="addto__priceBox">
-              <div class="addto__count">{cart_items.ORDER_LINE_QUANTITY}</div>
-              <div class="addto__price" data-price="{cart_items.GOODS_MOD_PRICE_NOW}">{cart_items.GOODS_MOD_PRICE_NOW | money_format}</div>
-            </div>
-          </div>
-        </div>
-        {% ENDIF %}
-      {% ENDFOR %}
-    </div>
-    <div class="goods__buttons">
-      <button type="submit" class="button button3 fancyModalClose" id="quickform-close">Продолжить</button>
-      <button type="button" class="button quickform" id="quickform-order" onclick="document.location='{CART_URL}';return false;">В корзину</button>
-    </div>
-  </div>
-</div>
 
 <!-- Блок для обновления данных корзины. Не виден пользователю -->
 <div style="display:none;" id="newCartLabel">
-  <a href="{CART_URL}" title="Корзина">
-    <div class="icon">
-      <i class="icon-cart"></i>
-      <span class="cart__count" data-count="{CART_COUNT_TOTAL}">{CART_COUNT_TOTAL}</span>
-    </div>
-    <div class="content">
-      <div class="cart__label">Корзина</div>
-      <div class="cart__totalSum totalSum">{CART_SUM_NOW_WITH_DISCOUNT | money_format }</div>
-    </div>
+  <div class="icon dropdown__open" data-open="cart">
+    <i class="icon-cart"></i>
+    <span class="cart__count" data-count="{CART_COUNT_TOTAL}">{CART_COUNT_TOTAL}</span>
     <span class="dropdown__angle"></span>
+  </div>
+  <a href="{CART_URL}" title="Корзина" class="content">
+    <div class="cart__label">Корзина</div>
+    <div class="cart__totalSum totalSum">{CART_SUM_NOW_WITH_DISCOUNT | money_format }</div>
   </a>
 </div>
 <!-- Блок для обновления данных корзины. Не виден пользователю -->
