--- a/files/html.htm
+++ b/files/html.htm
@@ -1543,6 +1543,9 @@
                 <a class="twitter" href="https://twitter.com/" title="twitter.com" target="_blank"><i class="icon-twitter" aria-hidden="true"></i><span>Twitter</span></a>
                 <a style="display: none;" class="whatsup" href="https://instagram.com/" title="Instagram.com" target="_blank"><i class="icon-whatsapp"></i><span>whatsapp</span></a>
                 <a style="display: none;" class="facebook" href="https://www.facebook.com/" title="FaceBook.com" target="_blank"><i class="icon-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+	              <a style="display: none;" class="tiktok" href="https://www.tiktok.com/" title="tiktok.com" target="_blank"><i class="icon-tiktok" aria-hidden="true"></i><span>tiktok</span></a>
+	              <a style="display: none;" class="telegram" href="https://www.telegram.com/" title="telegram.com" target="_blank"><i class="icon-telegram" aria-hidden="true"></i><span>telegram</span></a>
+	              <a style="display: none;" class="odnoklassniki" href="https://www.ok.ru/" title="ok.ru" target="_blank"><i class="icon-odnoklassniki" aria-hidden="true"></i><span>Facebook</span></a>
               </div>
             </div>
             <!-- Контакты -->
@@ -1597,6 +1600,19 @@
             <span>{COPYRIGHT_FOR_DESIGN_florist}</span>
             <div>{SETTINGS_STORE_HTML_CODE}</div>
           </div>
+	        <div class="payments">
+		        <a href="#" title="Способы оплаты">
+			        <i class="icon-mastercard"></i>
+			        <i class="icon-mir"></i>
+			        <i class="icon-qiwi"></i>
+			        <i class="icon-sber"></i>
+			        <i class="icon-visa"></i>
+			        <i class="icon-walletone"></i>
+			        <i class="icon-webmoney"></i>
+			        <i class="icon-yandex"></i>
+			        <i class="icon-yandexmoney"></i>
+		        </a>
+	        </div>
         </div>
       </div>
     </footer>
