--- a/files/html.htm
+++ b/files/html.htm
@@ -66,8 +66,11 @@
               <a class="youtube" href="https://www.youtube.com/" title="youtube.com" target="_blank"><i class="icon-youtube" aria-hidden="true"></i><span>YouTube</span></a>
               <a class="instagram" href="https://instagram.com/" title="Instagram.com" target="_blank"><i class="icon-instagram"></i><span>Instagram</span></a>
               <a class="twitter" href="https://twitter.com/" title="twitter.com" target="_blank"><i class="icon-twitter" aria-hidden="true"></i><span>Twitter</span></a>
-              <a style="display: none;" class="whatsup" href="https://instagram.com/" title="Instagram.com" target="_blank"><i class="icon-whatsapp"></i><span>whatsapp</span></a>
-              <a style="display: none;" class="facebook" href="https://www.facebook.com/" title="FaceBook.com" target="_blank"><i class="icon-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+	            <a style="display: none;" class="whatsup" href="https://instagram.com/" title="Instagram.com" target="_blank"><i class="icon-whatsapp"></i><span>whatsapp</span></a>
+	            <a style="display: none;" class="facebook" href="https://www.facebook.com/" title="FaceBook.com" target="_blank"><i class="icon-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+	            <a style="display: none;" class="tiktok" href="https://www.tiktok.com/" title="tiktok.com" target="_blank"><i class="icon-tiktok" aria-hidden="true"></i><span>tiktok</span></a>
+	            <a style="display: none;" class="telegram" href="https://www.telegram.com/" title="telegram.com" target="_blank"><i class="icon-telegram" aria-hidden="true"></i><span>telegram</span></a>
+	            <a style="display: none;" class="odnoklassniki" href="https://www.ok.ru/" title="ok.ru" target="_blank"><i class="icon-odnoklassniki" aria-hidden="true"></i><span>Facebook</span></a>
             </div>
           </div>
           <!-- Меню -->
